BUG: _static/CSS: fix navbar/footer overlap

--- a/_static/css/custom.css
+++ b/_static/css/custom.css
@@ -11,16 +11,13 @@
     padding-top: 4px;
 }
 
-div.document ul {
+div.document ul,
+div.sidebar ul ul{
     padding-left: 17px;
 }
 
 div.sidebar {
     padding-bottom: 14px; /* square */
-}
-
-div.sidebar ul ul {
-    padding-left: 20px;
 }
 
 div.sidebar pre {
@@ -73,24 +70,9 @@ footer {
     opacity: 0.7;
 }
 
-body > div.container-fluid > div:nth-child(1) > div.col-md-9 {
+#content-wrapper {
     background: white;
     border: 1px solid #e7e7e7;
     margin-top: -1px;
 }
-/* TODO: responsive break */
-@media (min-width: 767px) {
-    body > div.container-fluid > div:nth-child(1) > div.col-md-9 {
-        left: 25%;
-    }
-
-    #navbar-related, footer {
-        padding-left: 25%;
-    }
-
-    footer {
-        width: inherit;
-    }
-}
-
 
